--- a/Tutorat/Tutorat/Tutorat.csproj
+++ b/Tutorat/Tutorat/Tutorat.csproj
@@ -55,15 +55,28 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controller\HelpedStudentController.cs" />
     <Compile Include="Controller\TutorController.cs" />
+    <Compile Include="Controller\TutoringSessionController.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModel\ScheduleTutorListVM.cs" />
+    <Compile Include="ViewModel\TutotListVM.cs" />
+    <Compile Include="ViewModel\WorkingHoursTutorListVM.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="View\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\DataLayer\DataLayer.csproj">
+      <Project>{0c41cff2-1c03-4f9f-90f4-964db90639ed}</Project>
+      <Name>DataLayer</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>
