--- a/Tutorat/Tutorat/Tutorat.csproj
+++ b/Tutorat/Tutorat/Tutorat.csproj
@@ -60,17 +60,20 @@
     <Compile Include="Controller\TutoringSessionController.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModel\HelpedListVM.cs" />
     <Compile Include="ViewModel\ScheduleTutorListVM.cs" />
-    <Compile Include="ViewModel\TutotListVM.cs" />
+    <Compile Include="ViewModel\TutoringSessionListVM.cs" />
+    <Compile Include="ViewModel\TutorListVM.cs" />
     <Compile Include="ViewModel\WorkingHoursTutorListVM.cs" />
+    <Compile Include="View\HelpedListView.cs" />
+    <Compile Include="View\SessionListView.cs" />
+    <Compile Include="View\TutorListView.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="View\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <ProjectReference Include="..\DataLayer\DataLayer.csproj">
       <Project>{0c41cff2-1c03-4f9f-90f4-964db90639ed}</Project>
