Requete 1 presque terminé

--- a/Tutorat/Tutorat/Tutorat.csproj
+++ b/Tutorat/Tutorat/Tutorat.csproj
@@ -68,6 +68,7 @@
     <Compile Include="View\HelpedListView.cs" />
     <Compile Include="View\SessionListView.cs" />
     <Compile Include="View\TutorListView.cs" />
+    <Compile Include="View\WorkingHoursTutorListView.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
