--- a/Tutorat/Tutorat/Tutorat.csproj
+++ b/Tutorat/Tutorat/Tutorat.csproj
@@ -61,11 +61,12 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModel\HelpedListVM.cs" />
-    <Compile Include="ViewModel\ScheduleTutorListVM.cs" />
+    <Compile Include="ViewModel\ListAllWithNextTutoringSessionVM.cs" />
     <Compile Include="ViewModel\TutoringSessionListVM.cs" />
     <Compile Include="ViewModel\TutorListVM.cs" />
     <Compile Include="ViewModel\WorkingHoursTutorListVM.cs" />
     <Compile Include="View\HelpedListView.cs" />
+    <Compile Include="View\ListAllWithNextTutoringSessionView.cs" />
     <Compile Include="View\SessionListView.cs" />
     <Compile Include="View\TutorListView.cs" />
     <Compile Include="View\WorkingHoursTutorListView.cs" />
